added little node script to watch for js changes and compile

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"version": "0.0.1",
 	"dependencies": {
 		"express": "*",
-		"optimist": "*"
+		"optimist": "*",
+        "nodewatch": "*",
+        "requirejs": "*"
 	}
 }
