--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "volo": {
     "baseUrl": "www/js/lib",
     "dependencies": {
-      "bootstrap": "github:twitter/bootstrap/v2.2.1"
+      "lodash": "github:bestiejs/lodash/v0.9.2"
     }
   },
   "devDependencies": {
