--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "volo": {
     "baseUrl": "www/js/lib",
     "dependencies": {
-      "lodash": "github:bestiejs/lodash/v0.9.2"
+      "lodash": "github:bestiejs/lodash/v0.9.2", // Replacement for underscore.
+      //"jquery": "github:jquery/jquery/1.8.3", Not needed. Loaded from CDN.
+      "backbone": "github:amdjs/backbone/0.9.2"
     }
   },
   "devDependencies": {
