--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dependencies": {
       "lodash": "github:bestiejs/lodash/v0.9.2",
       "backbone": "github:amdjs/backbone/0.9.2",
+      "jquery": "github:jquery/jquery/1.8.3",
+      "underscore": "github:bestiejs/lodash/v0.9.2"
     }
   },
   "devDependencies": {
