--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "baseUrl": "www/js/lib",
     "dependencies": {
       "lodash": "github:bestiejs/lodash/v0.9.2",
-      "backbone": "github:amdjs/backbone/0.9.2",
+      "underscore": "github:amdjs/underscore/1.4.1",
       "jquery": "github:jquery/jquery/1.8.3",
-      "underscore": "github:bestiejs/lodash/v0.9.2"
+      "backbone": "github:amdjs/backbone/0.9.2"
     }
   },
   "devDependencies": {
