--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
       "lodash": "github:bestiejs/lodash/v0.9.2",
       "underscore": "github:amdjs/underscore/1.4.1",
       "jquery": "github:jquery/jquery/1.8.3",
-      "backbone": "github:amdjs/backbone/0.9.2"
+      "backbone": "github:amdjs/backbone/0.9.2",
+      "handlebars": "https://raw.github.com/SlexAxton/require-handlebars-plugin/master/Handlebars.js"
     }
   },
   "devDependencies": {
