--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,10 @@ www-built
 node_modules
 
 // Managed dependencies. Safe to ignore.
-// DO NOT IGNORE: require.js, bootsrap/ as these are not managed by volo.
+// DO NOT IGNORE: require.js, bootsrap/, and hbs/ as these are not managed by volo.
 
 www/js/lib/backbone.js
-www/js/lib/handlebars
+www/js/lib/handlebars.js
 www/js/lib/jquery.js
 www/js/lib/lodash.js
 www/js/lib/underscore.js
-www/js/lib/handlebars.js
