--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
       "underscore": "github:amdjs/underscore/1.4.1",
       "jquery": "github:jquery/jquery/1.8.3",
       "backbone": "github:amdjs/backbone/0.9.2",
-      "handlebars": "https://raw.github.com/SlexAxton/require-handlebars-plugin/master/Handlebars.js",
-      "require-css": "github:guybedford/require-css/master",
-      "require-less": "github:guybedford/require-less/master"
+      "handlebars": "https://raw.github.com/SlexAxton/require-handlebars-plugin/master/Handlebars.js"
     }
   },
   "devDependencies": {
